Another portion of raw ideas for further elaboration

--- a/2022-01-26-zettelkasten.org
+++ b/2022-01-26-zettelkasten.org
@@ -46,3 +46,16 @@ human attributes in the age of the machine, “The power of the unaided
 mind is highly overrated. Without external aids, memory, thought, and
 reasoning are all constrained. […] The real powers come from devising
 external aids that enhance cognitive abilities.”
+
+Stated simply, “surprise” means you stumble upon notes which you
+hadn’t expected. Your system of notes, on the other hand, receives a
+new note from you which wasn’t there before. (It’s properly called
+“serendipity”.)
+[[https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/][Create a Zettelkasten for your Notes to Improve Thinking and Writing • Zettelkasten Method]]
+
+These criteria – surprise serendipity, information and inner
+complexity – are the criteria any communication has to meet. And your
+system of notes, your Zettelkasten can meet them just as well as a
+human being.
+[[https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/][Create a Zettelkasten for your Notes to Improve Thinking and Writing • Zettelkasten Method]]
+
