--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -4,7 +4,7 @@ layout: page
 title: Organize Your Work
 tagline: " with a minimum interruptions"
 permalink: /professional/workflow_inside_org_mode.html
-categories: [workflow, org-mode, effeciency, Zettelkasten]
+categories: [workflow, org-mode, effeciency, Emacs, Zettelkasten]
 tags: [data gathering, data elaboration, notetaking]
 ---
 #+END_EXPORT
